# mazely

./: .flake8  .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish-test.yml  publish.yml  python-package.yml  tests.yml
docs/: conf.py  contents.rst  index.rst  license.rst  requirements.txt  usage_examples.rst
docs/reference/: algorithms.rst  index.rst  maze.rst
examples/: generate_with_prim.py  load_maze.py  save_maze.py  show_solution.py
maze/algorithms/: maze_generator.py  recursive_backtracking.py  shortest_path.py
resources/: 2015apec.maze  2019japan.maze  zigzag.maze
src/maze/: __about__.py  __init__.py  maze.py
src/maze/algorithms/: __init__.py  maze_generator.py
src/mazely/: __about__.py  __init__.py  maze.py  utilities.py
src/mazely/algorithms/: __init__.py  maze_generator.py  maze_solver.py  randomized_prim.py  recursive_backtracking.py  shortest_path.py
tests/: conftest.py  test_maze.py  test_maze_generator.py  test_maze_solver.py  test_utilities.py
tests/baseline/: _hash.py  hashes.json
