[project]
name = "mazely"
version = "0.2.0"
authors = [{ name = "Kenneth C." }]
description = "Implementation of maze-related algorithms"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT License" }
keywords = ["mazely", "maze", "algorithms"]
classifiers = [
    "Development Status :: 1 - Planning",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment :: Puzzle Games",
    "Topic :: Software Development :: Libraries",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["matplotlib>=3.7", "numpy>=1.25"]

[project.urls]
Documentation = "https://mazely.readthedocs.io"
Repository = "https://github.com/Munckenh/mazely.git"

[project.optional-dependencies]
docs = ["sphinx>=6.0,<8.0", "furo==2023.5.20"]
test = [
    "pytest>=7.4",
    "pytest-mpl>=0.16",
    "pytest-mock>=3.11",
    "cairosvg>=2.7",
    "cairocffi==1.6.0",
    "flake8>=6.0"
]

[build-system]
requires = [
    # First version of setuptools to support pyproject.toml configuration
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
testpaths = ["tests"]
