[metadata]
name = mazely
version = 0.1.1
author = Kenneth C.
description = Implementation of maze-related algorithms
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    mazely
    maze
    algorithms
project_urls = 
    Documentation = https://mazely.readthedocs.io/en/latest/
    Repository = https://github.com/Munckenh/mazely
license = MIT
classifiers = 
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Games/Entertainment :: Puzzle Games
    Topic :: Software Development :: Libraries
    Natural Language :: English
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only

[options]
packages= find:
package_dir = 
    = src
include_package_data = True
python_requires = >=3.11
install_requires = file: requirements.txt

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx>=6.0,<8.0
    furo==2023.5.20